--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-:host {
+/* :host {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 14px;
     color: #333;
@@ -260,10 +260,10 @@
     left: -230px;
     z-index: -10;
     width: 1920px;
-  }
+  } */
 
   /* Responsive Styles */
-  @media screen and (max-width: 767px) {
+  /* @media screen and (max-width: 767px) {
     .card-container > *:not(.circle-link) ,
     .terminal {
       width: 100%;
@@ -289,4 +289,72 @@
       display: none;
       visibility: hidden;
     }
-  }
+  } */
+  
+/* new design  */
+
+app-header {
+  position: fixed;
+  width: 100%;
+  top: 0px;
+  height: 10%;
+  z-index: 2;
+
+}
+
+.black-border {
+  border: 1px solid black;
+}
+main {
+  position: absolute;
+  width: 100%;
+  top: 10%;
+  /* height: 4rem; */
+  z-index: 1;
+
+}
+app-side-nav {
+  position: fixed;
+  left: 0rem;
+  width: 20%;
+  height: 80%;
+  /* height: calc(100vh-10); */
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  background-color: rgba(34, 34, 34, 1);
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+
+}
+.display-area {
+
+  position: absolute;
+  left: 20%;
+  top: 10%;
+  width: 60%;
+  /* width: calc(100%-250px); */
+  /* height: 80%; */
+  /* border: 1px solid black; */
+}
+app-footer {
+  position: fixed;
+  width: 100%;
+  top: 90%;
+  height: 10%;
+  z-index: 3;
+  border: 1px solid black;
+  background-color: rgba(34, 34, 34, 1);
+
+
+}
+app-right-nav{
+  position: fixed;
+  left: 80%;
+  width: 20%;
+  height: 80%;
+  /* height: calc(100vh-4rem); */
+  /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); */
+  background-color: rgba(34, 34, 34, 1);
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+border: 1px solid white;
+}
