--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,21 @@
 <div class="container-fluid g-0">
-
-  <app-header></app-header>
-  <main>
-
-    <app-side-nav>
-    </app-side-nav>
-    <div class="display-area p-3">
-      <!-- <p>Main Container</p> -->
-      <router-outlet></router-outlet>
-
-    </div>
-    <app-right-nav></app-right-nav>
-  </main>
+  <div *ngIf="!_apiService.isLoggedIn"> 
+    <app-login></app-login>
+  </div>
+  <div *ngIf="_apiService.isLoggedIn">
+    <app-header></app-header>
+    <main>
   
-  <app-footer></app-footer>
+      <app-side-nav>
+      </app-side-nav>
+      <div class="display-area p-3">
+        <!-- <p>Main Container</p> -->
+        <router-outlet></router-outlet>
+  
+      </div>
+      <app-right-nav></app-right-nav>
+    </main>
+    
+    <app-footer></app-footer>
+  </div>
 </div>
