--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,27 @@
-<p>login works!</p>
+<div>
+        <div class="container">
+            <div class="wrapper">
+                <h2>Login</h2>
+                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                    <div class="form-group">
+                        <label for="username">Username</label>
+                        <input type="text" formControlName="username" class="form-control" />
+                    
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" formControlName="password" class="form-control"  />
+                    
+                    </div>
+                    <div class="form-group" style="margin-top: 20px;">
+                        <button class="btn btn-primary">
+                            Login
+                        </button>
+                        <!-- <a href="#" class="btn btn-link">Register</a> -->
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    
+    
