--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,11 @@
 <div class="container-fluid g-0">
-
-  <app-header></app-header>
-  <main>
-
-    <app-side-nav>
-    </app-side-nav>
-    <div class="display-area p-3">
-      <!-- <p>Main Container</p> -->
-      <router-outlet></router-outlet>
-
+  <app-header (sideNavToggled)="sideNavStatus = $event;"></app-header>
+  <main>    
+    <app-side-nav [sideNavStatus]="sideNavStatus" [ngClass]="{'app-side-nav-open':sideNavStatus}"></app-side-nav>    
+    <div class="display-area p-3" [ngClass]="{'display-area-shrink':sideNavStatus}">
+      <app-right-nav [rsideNavStatus]="rsideNavStatus" [ngClass]="{'app-right-nav-open':rsideNavStatus}">      
+      </app-right-nav>
     </div>
-    <app-right-nav></app-right-nav>
-  </main>
-  
-  <app-footer></app-footer>
+    <app-footer></app-footer>
+  </main>  
 </div>
