--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,17 +1,57 @@
 <nav class="navbar navbar-expand navbar-dark bg-dark px-2">
-<div class="side-nav-button p-2 me-3 text-light">
-<i class="fa-solid fa-bars">
+    <div class="side-nav-button p-2 me-3 text-light" (click)="sideNavToggle()">
+        <i class="fa-solid fa-bars"></i>
+    </div>
+    <a class="navbar-brand px-4" href="#">ATMECS Project</a>
+    <div class="navbar-collapse">
+        <ul class="navbar-nav me-auto">
+            <li class="nav-item dropdown">
+                <a class="nav-link" routerLink="/home" routerLinkActive="active" role="button" aria-pressed="true" class="btn btn-link "
+                data-bs-toggle="dropdown">Home</a>            
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="" role="button"
+                data-bs-toggle="dropdown">Details</a>  
+                <ul class="dropdown-menu dropdown-menu-dark">
+                    <li><a class="dropdown-item" href="#">Child 1</a></li>
+                    <li><a class="dropdown-item" href="#">Child 2</a></li>
+                    <li><a class="dropdown-item" href="#">Child 3</a></li>
+                </ul>          
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="" role="button"
+                data-bs-toggle="dropdown">Services</a>  
+                <ul class="dropdown-menu dropdown-menu-dark">
+                    <li><a class="dropdown-item" href="#">Service 1</a></li>
+                    <li><a class="dropdown-item" href="#">Service 2</a></li>
+                    <li><a class="dropdown-item" href="#">Service 3</a></li>
+                </ul>          
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link" href="" role="button"
+                data-bs-toggle="dropdown">Contact Us</a>            
+            </li>            
+        </ul>
+    </div>
 
-</i>
-
-</div>
-<a class="navbar-brand px-4" href="#">ATMECS</a>
-<div class="navbar-collapse">
-    <ul class="navbar-nav me-auto">
-        <li> <a routerLink="/home" routerLinkActive="active" role="button" aria-pressed="true" class="btn btn-link ">Home</a>
-        </li>
-        <li><a routerLink="/about" routerLinkActive="active"  role="button" aria-pressed="true" class="btn btn-link">About</a></li>
-    </ul>
-</div>
-
+    <form class="d-flex me-5">
+        <input class="form-control me-2" type="search" placeholder="Search">
+        <button class="btn btn-outline-light" type="submit">Search</button>
+    </form>
+    <div class="profile-logo dropstart me-2">
+        <button class="btn btn-outline-light dropdown-toggle" data-bs-toggle="dropdown">
+            <i class="fa fa-user"></i>
+        </button> 
+        <ul class="dropdown-menu dropdown-menu-dark">
+            <li><a href="#" class="dropdown-item">Register</a></li>
+            <li><a href="#" class="dropdown-item">Login</a></li>
+            <li><a href="#" class="dropdown-item">Profile</a></li>
+            <li><a href="#" class="dropdown-item">Log Out</a></li>
+        </ul>
+    </div>
+    <div class="rnav-list-item">
+        <div class="rside-nav-button p-2 me-1 text-light" (click)="rsideNavToggle()">
+            <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+         </div>           
+    </div>
 </nav>
