--- a/src/app/right-nav/right-nav.component.html
+++ b/src/app/right-nav/right-nav.component.html
@@ -1,9 +1,10 @@
-<div class="side-nav-content">
-
-    <ul class="nav-list">
-        <li> <a routerLink="/home" routerLinkActive="active" role="button" aria-pressed="true" class="btn btn-link ">Home</a>
-        </li>
-        <li><a routerLink="/about" routerLinkActive="active"  role="button" aria-pressed="true" class="btn btn-link">About</a></li>
-
+<div class="right-nav-content">
+    <ul class="rnav-list" [ngClass]="{'rnav-list-open':rsideNavStatus}">
+        <li class="rnav-list-item" *ngFor="let ritem of rlist">
+            <i class="{{ritem.icon}}" ></i>
+            <span>
+                <a href="#">{{ritem.name}}</a>
+            </span>
+        </li>       
     </ul>
 </div>
