--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -1,9 +1,10 @@
 <div class="side-nav-content">
-
-    <ul class="nav-list">
-        <li> <a routerLink="/home" routerLinkActive="active" role="button" aria-pressed="true" class="btn btn-link ">Home</a>
-        </li>
-        <li><a routerLink="/about" routerLinkActive="active"  role="button" aria-pressed="true" class="btn btn-link">About</a></li>
-
+    <ul class="nav-list" [ngClass]="{'nav-list-open':sideNavStatus}">
+        <li class="nav-list-item" *ngFor="let item of list">
+            <i class="{{item.icon}}" ></i>
+            <span>
+                <a href="#">{{item.name}}</a>
+            </span>
+        </li>       
     </ul>
 </div>
