--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,17 +4,17 @@
                 <h2>Login</h2>
                 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                     <div class="form-group">
-                        <label for="username">Username</label>
+    <label for="username"><b>Username</b></label>
                         <input type="text" formControlName="username" class="form-control" />
-                    
+                         <span class="text-danger" *ngIf="loginForm.controls['username'].dirty && loginForm.hasError('required' , 'username')">username is required</span>
                     </div>
                     <div class="form-group">
-                        <label for="password">Password</label>
+   <label for="password"><b>Password</b></label>
                         <input type="password" formControlName="password" class="form-control"  />
-                    
+    <span class="text-danger" *ngIf="loginForm.controls['password'].dirty && loginForm.hasError('required' , 'password')">password is required</span>
                     </div>
                     <div class="form-group" style="margin-top: 20px;">
-                        <button class="btn btn-primary">
+                        <button class="btn btn-dark">
                             Login
                         </button>
                         <!-- <a href="#" class="btn btn-link">Register</a> -->
