--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,6 +9,7 @@
                 <a class="nav-link" routerLink="/home" routerLinkActive="active" role="button" aria-pressed="true" class="btn btn-link "
                 data-bs-toggle="dropdown">Home</a>            
             </li>
+            
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="" role="button"
                 data-bs-toggle="dropdown">Details</a>  
@@ -28,8 +29,8 @@
                 </ul>          
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link" href="" role="button"
-                data-bs-toggle="dropdown">Contact Us</a>            
+                <a class="nav-link" routerLink="/about" routerLinkActive="active" role="button" aria-pressed="true" class="btn btn-link "
+                data-bs-toggle="dropdown">About Us</a>         
             </li>            
         </ul>
     </div>
