--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,7 @@
   <main>    
     <app-side-nav [sideNavStatus]="sideNavStatus" [ngClass]="{'app-side-nav-open':sideNavStatus}"></app-side-nav>    
     <div class="display-area p-3" [ngClass]="{'display-area-shrink':sideNavStatus}">
+      <router-outlet></router-outlet>
       <app-right-nav [rsideNavStatus]="rsideNavStatus" [ngClass]="{'app-right-nav-open':rsideNavStatus}">      
       </app-right-nav>
     </div>
