added logic for the login page after refresh and storaged in localstorage

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -47,7 +47,7 @@
             <li><a href="#" class="dropdown-item">Register</a></li>
             <li><a href="#" class="dropdown-item">Login</a></li>
             <li><a href="#" class="dropdown-item">Profile</a></li>
-            <li><a href="#" class="dropdown-item">Log Out</a></li>
+            <li><a href="#" (click)="logout()" class="dropdown-item">Log Out</a></li>
         </ul>
     </div>
     <div class="rnav-list-item">
