--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer class="footer text-center p-3 ">
+<footer class="footer text-center p-3 " [ngStyle]="{'background-color': sharedService.layoutTheme}">
     <span>Copy Right @ 2023 - ATMECS</span>  
    </footer>
