--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -23,7 +23,7 @@ app-side-nav {
    width: 60px;
    height: calc(100vh - 4rem);
    box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
-   background-color: rgb(34,34,34,1);
+   /* background-color: rgb(34,34,34,1); */
    border-top: 1px solid white;
    overflow: hidden;
    white-space: nowrap;
@@ -52,7 +52,7 @@ app-right-nav {
    left: 80%;   
    height: calc(100vh - 4rem);
    box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
-   background-color: rgb(34,34,34,1);
+   /* background-color: rgb(34,34,34,1); */
    border-top: 1px solid white;
    overflow: hidden;
    white-space: nowrap;
