--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,7 +1,7 @@
 footer{
     padding: 10px 10px;
     width: 100%;    
-    background-color: #212529;
+    /* background-color: #212529; */
     color: white;
     position: fixed;
     left: 0;
