--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand navbar-dark bg-dark px-2">
+<nav class="navbar navbar-expand px-2" [ngStyle]="{'background-color': _apiService.layoutTheme}">
+    <!-- navbar-dark bg-dark -->
     <div class="side-nav-button p-2 me-3 text-light" (click)="sideNavToggle()">
         <i class="fa-solid fa-bars"></i>
     </div>
