--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,23 @@
-<div>Home Works Here  111</div>
+<div><h4>Employee Data :</h4><div class="pull-right"><button (click)="addNewEmployee()">Add New Employee</button></div></div>
+<div>
+    <table class="table table-bordered table-responsive" width="100%">
+        <thead>
+            <tr>
+                <th>User ID</th>
+                <th>Name</th>
+                <th>Designation</th>
+                <th>Email</th>
+                <th>Mobile</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let emp of emplist.employees">
+                <td>{{ emp.userid}}</td>
+                <td>{{ emp.name}}</td>
+                <td>{{ emp.designation}}</td>
+                <td>{{ emp.email}}</td>
+                <td>{{ emp.mobile}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
