--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -12,7 +12,21 @@
     <span>Show Left Menu : <input type="checkbox" id="showLeftMenu" value="showLeftMenu" [(ngModel)]="showLeftMenu"
         name="showLeftMenu"></span>
     <span> Show Logo : <input type="checkbox" id="showLogo" value="showLogo" [(ngModel)]="showLogo"
-        name="showLogo"></span><br>
+        name="showLogo"></span><br><br>
+
+        <label for="fontFamilySelect" class="form-label">Font Family : </label>
+           <select id="selectfont" [(ngModel)] = "myFont"  name = "myFont">
+           <option disabled style="font-weight: bold; background-color: #EEEEEE">Serif Fonts</option>
+              <option  style="font-family: Georgia,serif" >Georgia</option>
+              <option  style="font-family: Arial, Helvetica, sans-serif;">Arial</option>
+              <option  style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Monospace</option>
+              <option  style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">Cursive</option>
+              <option style = "font-family: fantasy;">Fantasy</option>
+              <option style = "font-family: Helvetica;">Helvetica</option>
+              <option style = "font-family: Verdana;">Verdana</option>
+              <option style = "font-family: Calibri;">Calibri</option>
+              <option style = "font-family: Noto;">Noto</option>
+          </select>
     <!-- Footer : <input type="checkbox" id="footerLayout" value="footerLayout" [(ngModel)]="footerLayout" name="footerLayout"><br> -->
     <br><br>
     <!-- <input type="submit" value="Apply" class="btn btn-primary buttonStyle"> -->
