--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,8 +1,13 @@
 <form>
-  <label for="favcolor">Select your favorite theme:</label>
-  <input type="color" id="favcolor" name="favcolor" [(ngModel)]="favcolor"> : {{favcolor}}<br><br>
-
-  <div class="container p-3 my-3 text-white" [ngStyle]="{'background-color': sharedService.layoutTheme}">
+  <div class="container p-3 my-3 width borderStyle">
+    <label for="favcolor">Select your favorite</label><br><br>
+    <span>Theme:<input type="color" id="favcolor" name="favcolor" [(ngModel)]="favcolor"> : {{favcolor}}<br></span>
+    <span>Header Color:<input type="color" id="headercolor" name="headercolor" [(ngModel)]="headercolor"> : {{headercolor}}   </span>
+    <span>Left Color:<input type="color" id="leftcolor" name="leftcolor" [(ngModel)]="leftcolor"> : {{leftcolor}}<br></span>
+    <span>Right Color:<input type="color" id="rightcolor" name="rightcolor" [(ngModel)]="rightcolor"> : {{rightcolor}}   </span>
+    <span>Footer Color:<input type="color" id="footercolor" name="footercolor" [(ngModel)]="footercolor"> : {{footercolor}}<br></span>
+  </div>
+  <div class="container p-3 my-3 width borderStyle">
     <label for="favlayout">Select your layout:</label><br><br>
     <span>Left Panel : <input type="checkbox" id="leftLayout" value="leftLayout" [(ngModel)]="leftLayout"
         name="leftLayout"></span>
@@ -14,19 +19,21 @@
     <span> Show Logo : <input type="checkbox" id="showLogo" value="showLogo" [(ngModel)]="showLogo"
         name="showLogo"></span><br><br>
 
-        <label for="fontFamilySelect" class="form-label">Font Family : </label>
-           <select id="selectfont" [(ngModel)] = "myFont"  name = "myFont">
-           <option disabled style="font-weight: bold; background-color: #EEEEEE">Serif Fonts</option>
-              <option  style="font-family: Georgia,serif" >Georgia</option>
-              <option  style="font-family: Arial, Helvetica, sans-serif;">Arial</option>
-              <option  style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Monospace</option>
-              <option  style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">Cursive</option>
-              <option style = "font-family: fantasy;">Fantasy</option>
-              <option style = "font-family: Helvetica;">Helvetica</option>
-              <option style = "font-family: Verdana;">Verdana</option>
-              <option style = "font-family: Calibri;">Calibri</option>
-              <option style = "font-family: Noto;">Noto</option>
-          </select>
+    <label for="fontFamilySelect" class="form-label">Font Family : </label>
+    <select id="selectfont" [(ngModel)]="myFont" name="myFont">
+      <option disabled style="font-weight: bold; background-color: #EEEEEE">Serif Fonts</option>
+      <option style="font-family: Georgia,serif">Georgia</option>
+      <option style="font-family: Arial, Helvetica, sans-serif;">Arial</option>
+      <option
+        style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+        Monospace</option>
+      <option style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">Cursive</option>
+      <option style="font-family: fantasy;">Fantasy</option>
+      <option style="font-family: Helvetica;">Helvetica</option>
+      <option style="font-family: Verdana;">Verdana</option>
+      <option style="font-family: Calibri;">Calibri</option>
+      <option style="font-family: Noto;">Noto</option>
+    </select>
     <!-- Footer : <input type="checkbox" id="footerLayout" value="footerLayout" [(ngModel)]="footerLayout" name="footerLayout"><br> -->
     <br><br>
     <!-- <input type="submit" value="Apply" class="btn btn-primary buttonStyle"> -->
