dynamic data is completed

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -39,8 +39,9 @@
     <!-- <input type="submit" value="Apply" class="btn btn-primary buttonStyle"> -->
     <!-- <input type="submit" value="Publish" class="btn btn-primary buttonStyle"> -->
   </div>
-
+<div style="float: left;">
   <button value="Apply" class="btn btn-primary buttonStyle" (click)="apply()">Apply</button>
   <button value="Publish" class="btn btn-primary buttonStyle" (click)="publish()">Publish</button>
-
+  <button value="Default Theme" class="btn btn-primary buttonStyle" (click)="defaultTheme()">Default Theme</button>
+</div>
 </form>
