--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,4 @@
+<div [ngStyle]="{'font-family': sharedService.selectFont}">
 <form>
   <div class="container p-3 my-3 width borderStyle">
     <label for="favcolor">Select your favorite</label><br><br>
@@ -45,3 +46,4 @@
   <button value="Default Theme" class="btn btn-primary buttonStyle" (click)="defaultTheme()">Default Theme</button>
 </div>
 </form>
+</div>
