--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -1,5 +1,5 @@
 <!-- <p>landingpage works!</p> -->
-
+<div [ngStyle]="{'font-family': sharedService.selectFont}">
 <div><h4>Employee Data :</h4></div>
 <div>
     <table class="table table-bordered table-responsive" width="100%">
@@ -23,4 +23,4 @@
         </tbody>
     </table>
 </div>
-
+</div>
