--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand px-2" [ngStyle]="{'background-color': _apiService.headerTheme,'font-family': _apiService.selectFont}">
+<nav class="navbar navbar-expand px-2" [ngStyle]="{'background-color': _apiService.headerTheme,'font-family': _apiService.selectFont,'font-size': _apiService.fontSize  + 'px'}">
     <!-- navbar-dark bg-dark -->
     <div class="side-nav-button p-2 me-3 text-light" (click)="sideNavToggle()">
         <i class="fa-solid fa-bars"></i>
