font-family added

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -34,6 +34,20 @@
       <option style="font-family: Verdana;">Verdana</option>
       <option style="font-family: Calibri;">Calibri</option>
       <option style="font-family: Noto;">Noto</option>
+      <option style="font-family: Cambria;">Cambria</option>
+      <option style="font-family: Candara;">Candara</option>
+      <option style="font-family: Cascadia Code;">Cascadia Code</option>
+      <option style="font-family: Ebrima;">Ebrima</option>
+      <option style="font-family: Gabriola;">Gabriola</option>
+      <option style="font-family: Georgia;">Georgia</option>
+      <option style="font-family: Javanese Text;">Javanese Text</option>
+      <option style="font-family: Leelawadee UI;">Leelawadee UI</option>
+      <option style="font-family: Segoe UI;">Segoe UI</option>
+      <option style="font-family: Times New Roman;">Times New Roman</option>
+      <option style="font-family: Trebuchet MS;">Trebuchet MS</option>
+      <option style="font-family: Webdings;">Webdings</option>
+      <option style="font-family: Symbol;">Symbol</option>
+      <option style="font-family: Yu Gothic;">Yu Gothic</option>
     </select>
     <span> Font Size : <input type="number" id="fontSize" value="fontSize" [(ngModel)]="fontSize"
       name="fontSize"></span>
