--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,49 +1,112 @@
 <div [ngStyle]="{'font-family': sharedService.selectFont}">
-<form>
-  <div class="container p-3 my-3 width borderStyle">
-    <label for="favcolor">Select your favorite</label><br><br>
-    <span>Theme:<input type="color" id="favcolor" name="favcolor" [(ngModel)]="favcolor"> : {{favcolor}}<br></span>
-    <span>Header Color:<input type="color" id="headercolor" name="headercolor" [(ngModel)]="headercolor"> : {{headercolor}}   </span>
-    <span>Left Color:<input type="color" id="leftcolor" name="leftcolor" [(ngModel)]="leftcolor"> : {{leftcolor}}<br></span>
-    <span>Right Color:<input type="color" id="rightcolor" name="rightcolor" [(ngModel)]="rightcolor"> : {{rightcolor}}   </span>
-    <span>Footer Color:<input type="color" id="footercolor" name="footercolor" [(ngModel)]="footercolor"> : {{footercolor}}<br></span>
-  </div>
-  <div class="container p-3 my-3 width borderStyle">
-    <label for="favlayout">Select your layout:</label><br><br>
-    <span>Left Panel : <input type="checkbox" id="leftLayout" value="leftLayout" [(ngModel)]="leftLayout"
-        name="leftLayout"></span>
-    <span> Right Panel : <input type="checkbox" id="rightLayout" value="rightLayout" [(ngModel)]="rightLayout"
-        name="rightLayout"></span>
-    <br><br>
-    <span>Show Left Menu : <input type="checkbox" id="showLeftMenu" value="showLeftMenu" [(ngModel)]="showLeftMenu"
-        name="showLeftMenu"></span>
-    <span> Show Logo : <input type="checkbox" id="showLogo" value="showLogo" [(ngModel)]="showLogo"
-        name="showLogo"></span><br><br>
+  <form>
+    <div class="container p-3 my-3 width borderStyle">
+      <div class="row">
 
-    <label for="fontFamilySelect" class="form-label">Font Family : </label>
-    <select id="selectfont" [(ngModel)]="myFont" name="myFont">
-      <option disabled style="font-weight: bold; background-color: #EEEEEE">Serif Fonts</option>
-      <option style="font-family: Georgia,serif">Georgia</option>
-      <option style="font-family: Arial, Helvetica, sans-serif;">Arial</option>
-      <option
-        style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
-        Monospace</option>
-      <option style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">Cursive</option>
-      <option style="font-family: fantasy;">Fantasy</option>
-      <option style="font-family: Helvetica;">Helvetica</option>
-      <option style="font-family: Verdana;">Verdana</option>
-      <option style="font-family: Calibri;">Calibri</option>
-      <option style="font-family: Noto;">Noto</option>
-    </select>
-    <!-- Footer : <input type="checkbox" id="footerLayout" value="footerLayout" [(ngModel)]="footerLayout" name="footerLayout"><br> -->
-    <br><br>
-    <!-- <input type="submit" value="Apply" class="btn btn-primary buttonStyle"> -->
-    <!-- <input type="submit" value="Publish" class="btn btn-primary buttonStyle"> -->
-  </div>
-<div style="float: left;">
-  <button value="Apply" class="btn btn-primary buttonStyle" (click)="apply()">Apply</button>
-  <button value="Publish" class="btn btn-primary buttonStyle" (click)="publish()">Publish</button>
-  <button value="Default Theme" class="btn btn-primary buttonStyle" (click)="defaultTheme()">Default Theme</button>
-</div>
-</form>
+        <label for="favcolor">Select your favorite Color</label><br><br>
+
+      </div>
+      <div class="row">
+        <div class="col-11">
+          <div class="row">
+            <div class="col-2">Theme:</div>
+            <div class="col-1"><input type="color" id="favcolor" name="favcolor" [(ngModel)]="favcolor" class=""></div>
+            <div class="col-2"> {{favcolor}}</div>
+            <div class="col-2">Header Color:</div>
+            <div class="col-1"><input type="color" id="headercolor" name="headercolor" [(ngModel)]="headercolor"></div>
+            <div class="col-2"> {{headercolor}}</div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-11">
+          <div class="row">
+            <div class="col-2">Left Color:</div>
+            <div class="col-1"><input type="color" id="leftcolor" name="leftcolor" [(ngModel)]="leftcolor"></div>
+            <div class="col-2"> {{leftcolor}}</div>
+            <div class="col-2">Right Color:</div>
+            <div class="col-1"><input type="color" id="rightcolor" name="rightcolor" [(ngModel)]="rightcolor"></div>
+            <div class="col-2"> {{rightcolor}} </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-11">
+          <div class="row">
+            <div class="col-2">Footer Color:</div>
+            <div class="col-1"><input type="color" id="footercolor" name="footercolor" [(ngModel)]="footercolor"></div>
+            <div class="col-2"> {{footercolor}}</div>
+            <!-- <div class="col-2">Right Color:</div>
+            <div class="col-1"><input type="color" id="rightcolor" name="rightcolor" [(ngModel)]="rightcolor"></div>
+            <div class="col-2"> {{rightcolor}} </div> -->
+          </div>
+        </div>
+      </div>
+
+      <!-- <div class="row">
+        <div class="col-5">
+          <span>Left Color:<input type="color" id="leftcolor" name="leftcolor" [(ngModel)]="leftcolor"> :
+            {{leftcolor}}<br></span>
+        </div>
+        <div class="col-5">
+          <span>Right Color:<input type="color" id="rightcolor" name="rightcolor" [(ngModel)]="rightcolor"> :
+            {{rightcolor}} </span>
+        </div>
+      </div> -->
+      <!-- <div class="row">
+        <div class="col">
+          <span>Footer Color:<input type="color" id="footercolor" name="footercolor" [(ngModel)]="footercolor"> :
+            {{footercolor}}<br></span>
+        </div>
+      </div> -->
+
+    </div>
+    <div class="container p-3 my-3 width borderStyle">
+      <div class="row">
+        <label for="favlayout">Select your layout:</label><br><br>
+      </div>
+      <div class="row">
+        <div class="col">
+          <span>Left Panel : <input type="checkbox" id="leftLayout" value="leftLayout" [(ngModel)]="leftLayout"
+              name="leftLayout"></span>
+        </div>
+        <div class="col">
+          <span> Right Panel : <input type="checkbox" id="rightLayout" value="rightLayout" [(ngModel)]="rightLayout"
+              name="rightLayout"></span>
+        </div>
+        <div class="col">
+          <span>Show Left Menu : <input type="checkbox" id="showLeftMenu" value="showLeftMenu"
+              [(ngModel)]="showLeftMenu" name="showLeftMenu"></span>
+        </div>
+        <div class="col"></div>
+      </div>
+      <span> Show Logo : <input type="checkbox" id="showLogo" value="showLogo" [(ngModel)]="showLogo"
+          name="showLogo"></span><br><br>
+
+      <label for="fontFamilySelect" class="form-label">Font Family : </label>
+      <select id="selectfont" [(ngModel)]="myFont" name="myFont">
+        <option disabled style="font-weight: bold; background-color: #EEEEEE">Serif Fonts</option>
+        <option style="font-family: Georgia,serif">Georgia</option>
+        <option style="font-family: Arial, Helvetica, sans-serif;">Arial</option>
+        <option
+          style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+          Monospace</option>
+        <option style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">Cursive</option>
+        <option style="font-family: fantasy;">Fantasy</option>
+        <option style="font-family: Helvetica;">Helvetica</option>
+        <option style="font-family: Verdana;">Verdana</option>
+        <option style="font-family: Calibri;">Calibri</option>
+        <option style="font-family: Noto;">Noto</option>
+      </select>
+      <!-- Footer : <input type="checkbox" id="footerLayout" value="footerLayout" [(ngModel)]="footerLayout" name="footerLayout"><br> -->
+      <br><br>
+      <!-- <input type="submit" value="Apply" class="btn btn-primary buttonStyle"> -->
+      <!-- <input type="submit" value="Publish" class="btn btn-primary buttonStyle"> -->
+    </div>
+    <div style="float: left;">
+      <button value="Apply" class="btn btn-primary buttonStyle" (click)="apply()">Apply</button>
+      <button value="Publish" class="btn btn-primary buttonStyle" (click)="publish()">Publish</button>
+      <button value="Default Theme" class="btn btn-primary buttonStyle" (click)="defaultTheme()">Default Theme</button>
+    </div>
+  </form>
 </div>
