--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,51 +1,182 @@
 <div [ngStyle]="{'font-family': sharedService.selectFont,'font-size': sharedService.fontSize  + 'px' }">
-<form>
-  <div class="container p-3 my-3 width borderStyle">
-    <label for="favcolor">Select your favorite</label><br><br>
-    <span>Theme:<input type="color" id="favcolor" name="favcolor" [(ngModel)]="favcolor"> : {{favcolor}}<br></span>
-    <span>Header Color:<input type="color" id="headercolor" name="headercolor" [(ngModel)]="headercolor"> : {{headercolor}}   </span>
-    <span>Left Color:<input type="color" id="leftcolor" name="leftcolor" [(ngModel)]="leftcolor"> : {{leftcolor}}<br></span>
-    <span>Right Color:<input type="color" id="rightcolor" name="rightcolor" [(ngModel)]="rightcolor"> : {{rightcolor}}   </span>
-    <span>Footer Color:<input type="color" id="footercolor" name="footercolor" [(ngModel)]="footercolor"> : {{footercolor}}<br></span>
-  </div>
-  <div class="container p-3 my-3 width borderStyle">
-    <label for="favlayout">Select your layout:</label><br><br>
-    <span>Left Panel : <input type="checkbox" id="leftLayout" value="leftLayout" [(ngModel)]="leftLayout"
-        name="leftLayout"></span>
-    <span> Right Panel : <input type="checkbox" id="rightLayout" value="rightLayout" [(ngModel)]="rightLayout"
-        name="rightLayout"></span>
-    <br><br>
-    <span>Show Left Menu : <input type="checkbox" id="showLeftMenu" value="showLeftMenu" [(ngModel)]="showLeftMenu"
-        name="showLeftMenu"></span>
-    <span> Show Logo : <input type="checkbox" id="showLogo" value="showLogo" [(ngModel)]="showLogo"
-        name="showLogo"></span><br><br>
+  <form>
+    <div class="container p-3 width borderStyle">
+      <div class="col">
+        <label for="favlayout">Select your Theme</label><br><br>
+      </div>
+      <div class="row" style="margin: .25rem;">
+        
+        <!-- <label for="favcolor">Select your favorite</label><br><br>
+      <span>Theme:<input type="color" id="favcolor" name="favcolor" [(ngModel)]="favcolor"> : {{favcolor}}<br></span> -->
+        <!-- <div class="col-lg-4"> -->
+        <div class="card" style="width: 10rem; margin-right: 2%;" [ngStyle]="{'background-color': this.headercolor}">
+          <div class="card-body">
+            <p class="card-text">HEADER Color : {{headercolor}}</p>
+            <div class="container">
+              <div class="row md-center">
+                <div class="col col-lg">
+                  <div class="form-group">
+                    <input type="color" id="headercolor" name="headercolor" [(ngModel)]="headercolor">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card" style="width: 10rem; margin-right: 2%;" [ngStyle]="{'background-color': this.footercolor}">
+          <div class="card-body">
+            <p class="card-text">FOOTER Color : {{footercolor}}</p>
+            <div class="container">
+              <div class="row md-center">
+                <div class="col col-lg">
+                  <div class="form-group">
+                    <input type="color" id="footercolor" name="footercolor" [(ngModel)]="footercolor">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
-    <label for="fontFamilySelect" class="form-label">Font Family : </label>
-    <select id="selectfont" [(ngModel)]="myFont" name="myFont">
-      <option disabled style="font-weight: bold; background-color: #EEEEEE">Serif Fonts</option>
-      <option style="font-family: Georgia,serif">Georgia</option>
-      <option style="font-family: Arial, Helvetica, sans-serif;">Arial</option>
-      <option
-        style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
-        Monospace</option>
-      <option style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">Cursive</option>
-      <option style="font-family: fantasy;">Fantasy</option>
-      <option style="font-family: Helvetica;">Helvetica</option>
-      <option style="font-family: Verdana;">Verdana</option>
-      <option style="font-family: Calibri;">Calibri</option>
-      <option style="font-family: Noto;">Noto</option>
-    </select>
-    <span> Font Size : <input type="number" id="fontSize" value="fontSize" [(ngModel)]="fontSize"
-      name="fontSize"></span>
-    <!-- Footer : <input type="checkbox" id="footerLayout" value="footerLayout" [(ngModel)]="footerLayout" name="footerLayout"><br> -->
-    <br><br>
-    <!-- <input type="submit" value="Apply" class="btn btn-primary buttonStyle"> -->
-    <!-- <input type="submit" value="Publish" class="btn btn-primary buttonStyle"> -->
-  </div>
-<div style="float: left;">
-  <button value="Apply" class="btn btn-primary buttonStyle" (click)="apply()">Apply</button>
-  <button value="Publish" class="btn btn-primary buttonStyle" (click)="publish()">Publish</button>
-  <button value="Default Theme" class="btn btn-primary buttonStyle" (click)="defaultTheme()">Default Theme</button>
-</div>
-</form>
+
+        <div class="card" style="width: 10rem; margin-right: 2%;" [ngStyle]="{'background-color': this.leftcolor}">
+          <div class="card-body">
+            <p class="card-text">LEFT Menu Color : {{leftcolor}}</p>
+            <div class="container">
+              <div class="row md-center">
+                <div class="col col-lg">
+                  <div class="form-group">
+                    <input type="color" id="leftcolor" name="leftcolor" [(ngModel)]="leftcolor">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="card" style="width: 10rem; margin-right: 2%;" [ngStyle]="{'background-color': this.rightcolor}">
+          <div class="card-body">
+            <p class="card-text">RIGHT Menu Color : {{rightcolor}}</p>
+            <div class="container">
+              <div class="row md-center">
+                <div class="col col-lg">
+                  <div class="form-group">
+                    <input type="color" id="rightcolor" name="rightcolor" [(ngModel)]="rightcolor">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="card" style="width: 10rem; margin-right: 2%;" [ngStyle]="{'background-color': this.favcolor}">
+          <div class="card-body">
+            <p class="card-text">DEFAULT Theme : {{favcolor}}</p>
+            <div class="container">
+              <div class="row md-center">
+                <div class="col col-lg">
+                  <div class="form-group">
+                    <input type="color" id="favcolor" name="favcolor" [(ngModel)]="favcolor">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <!-- <span>Header Color:<input type="color" id="headercolor" name="headercolor" [(ngModel)]="headercolor"> :
+        {{headercolor}} </span>
+      <span>Left Color:<input type="color" id="leftcolor" name="leftcolor" [(ngModel)]="leftcolor"> :
+        {{leftcolor}}<br></span>
+      <span>Right Color:<input type="color" id="rightcolor" name="rightcolor" [(ngModel)]="rightcolor"> : {{rightcolor}}
+      </span>
+      <span>Footer Color:<input type="color" id="footercolor" name="footercolor" [(ngModel)]="footercolor"> :
+        {{footercolor}}<br></span> -->
+    </div>
+    <div class="container p-3 my-3 width borderStyle">
+      <div class="row">
+        <div class="col">
+          <label for="favlayout">Select your Layout</label><br><br>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <span>Left Panel : <input type="checkbox" id="leftLayout" value="leftLayout" [(ngModel)]="leftLayout"
+              name="leftLayout"></span>
+        </div>
+        <div class="col">
+          <span> Right Panel : <input type="checkbox" id="rightLayout" value="rightLayout" [(ngModel)]="rightLayout"
+              name="rightLayout"></span>
+        </div>
+        <div class="col">
+          <span>Show Left Menu : <input type="checkbox" id="showLeftMenu" value="showLeftMenu"
+              [(ngModel)]="showLeftMenu" name="showLeftMenu"></span>
+        </div>
+        <div class="col"></div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <span> Show Logo : <input type="checkbox" id="showLogo" value="showLogo" [(ngModel)]="showLogo"
+              name="showLogo"></span><br><br>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <label for="fontFamilySelect" class="form-label">Font Family : </label>
+       
+        
+          <select id="selectfont" [(ngModel)]="myFont" name="myFont">
+            <option disabled style="font-weight: bold; background-color: #EEEEEE">Serif Fonts</option>
+            <option style="font-family: Georgia,serif">Georgia</option>
+            <option style="font-family: Arial, Helvetica, sans-serif;">Arial</option>
+            <option
+              style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+              Monospace</option>
+            <option style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">Cursive</option>
+            <option style="font-family: fantasy;">Fantasy</option>
+            <option style="font-family: Helvetica;">Helvetica</option>
+            <option style="font-family: Verdana;">Verdana</option>
+            <option style="font-family: Calibri;">Calibri</option>
+            <option style="font-family: Noto;">Noto</option>
+
+            <option style="font-family: Cambria;">Cambria</option>
+            <option style="font-family: Candara;">Candara</option>
+            <option style="font-family: Cascadia Code;">Cascadia Code</option>
+            <option style="font-family: Ebrima;">Ebrima</option>
+            <option style="font-family: Gabriola;">Gabriola</option>
+            <option style="font-family: Georgia;">Georgia</option>
+            <option style="font-family: Javanese Text;">Javanese Text</option>
+            <option style="font-family: Leelawadee UI;">Leelawadee UI</option>
+            <option style="font-family: Segoe UI;">Segoe UI</option>
+            <option style="font-family: Times New Roman;">Times New Roman</option>
+            <option style="font-family: Trebuchet MS;">Trebuchet MS</option>
+            <option style="font-family: Webdings;">Webdings</option>
+            <option style="font-family: Symbol;">Symbol</option>
+            <option style="font-family: Yu Gothic;">Yu Gothic</option>
+          </select>
+        </div>
+        <div class="col">
+          <span> Font Size : <input type="number" id="fontSize" value="fontSize" [(ngModel)]="fontSize"
+              name="fontSize"></span>
+          <!-- Footer : <input type="checkbox" id="footerLayout" value="footerLayout" [(ngModel)]="footerLayout" name="footerLayout"><br> -->
+
+          <!-- <input type="submit" value="Apply" class="btn btn-primary buttonStyle"> -->
+          <!-- <input type="submit" value="Publish" class="btn btn-primary buttonStyle"> -->
+        </div>
+      </div>
+      <div class="col"></div>
+      <div class="col"></div>
+      
+    </div>
+    <div style="float: left;">
+      <button value="Apply" class="btn btn-primary buttonStyle" (click)="apply()">Apply</button>
+      <button value="Publish" class="btn btn-primary buttonStyle" (click)="publish()">Publish</button>
+      <button value="Default Theme" class="btn btn-primary buttonStyle" (click)="defaultTheme()">Default
+        Theme</button>
+    </div>
+  </form>
 </div>
