--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,30 +8,16 @@
     <div class="navbar-collapse">
         <ul class="navbar-nav me-auto">
             <li class="nav-item dropdown">
-                <a class="nav-link" routerLink="/home" routerLinkActive="active" role="button" aria-pressed="true" class="btn btn-link "
+                <a class="nav-link" routerLink="/home" routerLinkActive="active" role="button"
                 data-bs-toggle="dropdown">Home</a>            
             </li>
             
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="" role="button"
-                data-bs-toggle="dropdown">Details</a>  
-                <ul class="dropdown-menu dropdown-menu-dark">
-                    <li><a class="dropdown-item" href="#">Child 1</a></li>
-                    <li><a class="dropdown-item" href="#">Child 2</a></li>
-                    <li><a class="dropdown-item" href="#">Child 3</a></li>
-                </ul>          
+                <a class="nav-link" routerLink="/landing" role="button" routerLinkActive="active"
+                data-bs-toggle="dropdown">Employee Details</a>          
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="" role="button"
-                data-bs-toggle="dropdown">Services</a>  
-                <ul class="dropdown-menu dropdown-menu-dark">
-                    <li><a class="dropdown-item" href="#">Service 1</a></li>
-                    <li><a class="dropdown-item" href="#">Service 2</a></li>
-                    <li><a class="dropdown-item" href="#">Service 3</a></li>
-                </ul>          
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link" routerLink="/about" routerLinkActive="active" role="button" aria-pressed="true" class="btn btn-link "
+                <a class="nav-link" routerLink="/about" routerLinkActive="active" role="button"
                 data-bs-toggle="dropdown">About Us</a>         
             </li>            
         </ul>
