--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div><h4>Employee Data :</h4><div class="pull-right"><button (click)="addNewEmployee()">Add New Employee</button></div></div>
+<!-- <div><h4>Employee Data :</h4><div class="pull-right"><button (click)="addNewEmployee()">Add New Employee</button></div></div>
 <div>
     <table class="table table-bordered table-responsive" width="100%">
         <thead>
@@ -20,4 +20,34 @@
             </tr>
         </tbody>
     </table>
+</div> -->
+<div class="banner">
+    <div class="content">
+        <h3 class="mb-5" [ngStyle]="{'font-family': sharedService.selectFont,'font-size': sharedService.fontSize + 'px'}">Employee Portal</h3>
+        <a routerLink = "/landing" [ngStyle]="{'font-family': sharedService.selectFont,'font-size': sharedService.fontSize + 'px'}">VIEW EMPLOYEES <i class="bi bi-arrow-right"></i></a>
+    </div>
+</div>
+
+<div class="container mt-4 mb-4">
+    <h3 class="text-centre" [ngStyle]="{'font-family': sharedService.selectFont,'font-size': sharedService.fontSize + 'px'}">One Portal <span class="highlight">to know your COLLEAGUE</span></h3>
+    <div class="row">
+        <div class="cat col-lg-3 mt-3">
+            <div class="employee employee-1">
+                <img src="../../../assets/New-employee.jpg" alt="" />
+            </div>
+            <h5 [ngStyle]="{'font-family': sharedService.selectFont,'font-size': sharedService.fontSize + 'px'}">New Employee</h5>
+        </div>
+        <div class="cat col-lg-3 mt-3">
+            <div class="employee employee-2">
+                <img src="../../../assets/Birthday.webp" alt="" />
+            </div>
+            <h5 [ngStyle]="{'font-family': sharedService.selectFont,'font-size': sharedService.fontSize + 'px'}">Birthdays</h5>
+        </div>
+        <div class="cat col-lg-3 mt-3">
+            <div class="employee employee-3">
+                <img src="../../../assets/HappyWorkAnniversary.webp" alt="" />
+            </div>
+            <h5 [ngStyle]="{'font-family': sharedService.selectFont,'font-size': sharedService.fontSize + 'px'}">Work Anniversary</h5>
+        </div>
+    </div>
 </div>
