admin changes and landing page changes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,7 +21,7 @@
         </tbody>
     </table>
 </div> -->
-<div class="banner">
+<div class="banner" style=" background-image: url('../../../assets/Banner.webp');">
     <div class="content">
         <h3 class="mb-5" [ngStyle]="{'font-family': sharedService.selectFont,'font-size': sharedService.fontSize + 'px'}">Employee Portal</h3>
         <a routerLink = "/landing" [ngStyle]="{'font-family': sharedService.selectFont,'font-size': sharedService.fontSize + 'px'}">VIEW EMPLOYEES <i class="bi bi-arrow-right"></i></a>
