--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -5,148 +5,104 @@
     left: 20%;
     width: 60%;
     /* width: calc(100%-250px); */
-    /* bottom: 80%;
+/* bottom: 80%;
     border: 1px solid black;
   } */
 
-  .banner
-{
-    background-image: url('D:/UI-POC/UI-POC/src/assets/Banner.webp');
-    height: 300px;
-    background-position: center center;
-    background-size: cover;
+.banner {
+  height: 300px;
+  background-position: center center;
+  background-size: cover;
 }
-.content
-{
-    top: 15%;
-    left: 5%;
-    position: absolute;
+
+.content {
+  top: 15%;
+  left: 5%;
+  position: absolute;
 }
-.content h3 
-{
-    color:rgb(97, 25, 25);
-    font-size: 40px;
-    font-weight: bold;
-    font-style: oblique;
-  
+
+.content h3 {
+  color: rgb(97, 25, 25);
+  font-size: 40px;
+  font-weight: bold;
+  font-style: oblique;
+
 }
-h3
-{
+
+h3 {
   color: black;
   font-weight: bold;
 }
-.content a 
-{
-    text-decoration: none;
-    background-color: rgba(0, 162, 255, 0.568);
-    color: black;
-    font-weight: bold;
-    padding: 10px 15px;
-    border-radius: 30px;
+
+.content a {
+  text-decoration: none;
+  background-color: rgba(0, 162, 255, 0.568);
+  color: black;
+  font-weight: bold;
+  padding: 10px 15px;
+  border-radius: 30px;
 }
 
-.content a:hover 
-{
-    background-color:rgb(97, 25, 25);
-    color: wheat;
-    font-weight: bold;
+.content a:hover {
+  background-color: rgb(97, 25, 25);
+  color: wheat;
+  font-weight: bold;
 }
 
-.highlight
-{
-    color: brown;
-    font-weight: bold;
-    font-style: italic;
-    text-decoration: underline;
+.highlight {
+  color: brown;
+  font-weight: bold;
+  font-style: italic;
+  text-decoration: underline;
 }
 
-.employeebox 
-{
-   /* background-color: var(--primary-color);*/
-    padding: 10px 5px;
-    border-radius: 10px;
-} 
-.employeebox img
-{
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
-    border-radius: 5px;
-    transition: all 500ms ease-out;
+.employeebox {
+  /* background-color: var(--primary-color);*/
+  padding: 10px 5px;
+  border-radius: 10px;
 }
 
-.employeebox img:hover
-{
-    transform: scale(1.2);
+.employeebox img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 5px;
+  transition: all 500ms ease-out;
 }
 
-.employeebox h1 
-{
+
+.employeebox h1 {
   color: blue;
-    font-size: 18px;
-    margin-top: 20px;
-    font-weight: bold;
-}
-.viewallbtn
-{
-    text-decoration: none;
-    background-color:var(--primary-color);
-    color: #000;
-    font-weight: bold;
-    padding: 15px 20px;
-    border-radius: 30px;
-    
+  font-size: 18px;
+  margin-top: 20px;
+  font-weight: bold;
 }
 
-.viewallbtn:hover 
-{
-    background-color:brown;
-    color: var(--primary-color);
-    font-weight: bold;
+
+@media screen and (max-width:600px) {
+  .banner {
+    height: 700px;
+  }
 }
 
-@media screen and (max-width:600px)
-{
-    .banner
-    {
-        height: 700px;
-    }
-}
-  
-.cat .item
-{
-   overflow: hidden;
-   padding:  10px 5px;
-   border-radius: 5px;
 
-}
-
-.cat  h5
-{
+.cat h5 {
   margin-top: 2%;
-    font-weight: bolder;
-    text-align: center;
-    color: rgb(97, 25, 25);
+  font-weight: bolder;
+  text-align: center;
+  color: rgb(97, 25, 25);
 }
 
-.cat p
-{
-    text-align: center;
-    font-weight: bold;
-    color: red;
+
+.cat {
+  padding: 10px 5px;
+  border-radius: 10px;
 }
 
-.cat 
-{
-   padding: 10px 5px;
-   border-radius: 10px;
-}
- 
-.cat img
-{
-   width: 100%;
-   height: 150px;
-   object-fit: fill;
-   border-radius: 5px;
-   transition: all 500ms ease-out;
+.cat img {
+  width: 100%;
+  height: 150px;
+  object-fit: fill;
+  border-radius: 5px;
+  transition: all 500ms ease-out;
 }
