--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -78,7 +78,7 @@
               <div class="row md-center">
                 <div class="col col-lg">
                   <div class="form-group">
-                    <input type="color" id="favcolor" name="favcolor" [(ngModel)]="favcolor">
+                    <input type="color" id="favcolor" name="favcolor" [(ngModel)]="favcolor" (ngModelChange)="valuechange($event)">
                   </div>
                 </div>
               </div>
