remove menu text

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -41,7 +41,7 @@
 
         <div class="card" style="width: 10rem; margin-right: 2%;" [ngStyle]="{'background-color': this.leftcolor}">
           <div class="card-body">
-            <p class="card-text">LEFT Menu Color : {{leftcolor}}</p>
+            <p class="card-text">LEFT Color : {{leftcolor}}</p>
             <div class="container">
               <div class="row md-center">
                 <div class="col col-lg">
@@ -57,7 +57,7 @@
 
         <div class="card" style="width: 10rem; margin-right: 2%;" [ngStyle]="{'background-color': this.rightcolor}">
           <div class="card-body">
-            <p class="card-text">RIGHT Menu Color : {{rightcolor}}</p>
+            <p class="card-text">RIGHT Color : {{rightcolor}}</p>
             <div class="container">
               <div class="row md-center">
                 <div class="col col-lg">
